# TCPSocketProgram

./: README (Turkish).txt
TCP Socket Programming/: TCP_Client.lnk  TCP_Server.lnk
TCP Socket Programming/TCP_Client/: CMakeLists.txt  main.cpp  socket.cpp  socket.h  user.cpp  user.h
TCP Socket Programming/TCP_Server/: CMakeLists.txt  Data.txt  main.cpp  server.cpp  server.h
TCP Socket Programming/build-TCP_Client-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
TCP Socket Programming/build-TCP_Client-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/TCP_Client_autogen/: deps  moc_predefs.h
TCP Socket Programming/build-TCP_Client-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/TCP_Client_autogen/EWIEGA46WW/: moc_socket.cpp  moc_socket.cpp.d
TCP Socket Programming/build-TCP_Server-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  build.ninja.tmp7100c  cmake_install.cmake
TCP Socket Programming/build-TCP_Server-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/TCP_Server_autogen/: deps
TCP Socket Programming/build-TCP_Server-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/TCP_Server_autogen/EWIEGA46WW/: moc_server.cpp  moc_server.cpp.d
